--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "lesson_1",
+  "name": "onpoint-backend-test-vova-grishchenko",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "guess_number.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
